# datapilot-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  start.sh
.streamlit/: config.toml
backend/: .dockerignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  routes_ask.py  routes_eda.py  routes_upload.py
backend/app/core/: orchestrator.py  profiler.py  prompt_builder.py  response.py
backend/app/execution/: base.py  docker_executor.py  factory.py  runner.py  subprocess_executor.py
backend/app/llm/: anthropic_client.py  base.py  gemini_client.py
backend/app/session/: store.py
backend/prompts/: eda_profile.md  generate_code.md  self_correct.md  synthesize_answer.md
backend/sandbox/: Dockerfile.runner
backend/tests/: conftest.py  test_executor.py  test_orchestrator.py  test_profiler.py  test_prompt_builder.py
docs/: architecture.md  security.md
docs/decisions/: 0001-executor-interface.md  0002-no-agent-framework.md  0003-schema-not-data.md
frontend/: streamlit_app.py  theme.py
sample_data/: sales.csv
