[project]
name = "agentic-analysis-assistant"
version = "0.1.0"
description = "Autonomous Data Analyst Agent — write code, execute, observe, self-correct."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "seaborn>=0.13",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
frontend = ["streamlit>=1.33", "requests>=2.31"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
